# mental_health_prototype

./: .env  .gitignore  README.md  docker_compose.yml  install.sh  pyproject.toml  todo.md
auth/: Dockerfile  pyproject.toml
backend/: Dockerfile  app.py
database/: Dockerfile  database.py  main.py
database/models/: __init__.py  psychological_test.py  task.py  user.py
dev_documentation/: create_install.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: NavBar.vue  NotificationsBar.vue
frontend/src/pages/: Calendar.vue  GeneralMetrics.vue  Home.vue  Profile.vue  Tasks.vue  UserMetrics.vue
frontend/src/router/: index.js
messaging/: Dockerfile  app.py
