[tool.poetry]
name = "management-app"
version = "0.1.0"
description = "A prototype management application with user authentication, dashboard, and notification support."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
requests = "^2.31.0"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-flask = "^1.2.0"
black = "^23.9.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
